# A-Systematic-Bayesian-Integration-of-Epidemiological-and-Genetic-Data

./: .gitignore  CMakeLists.txt
mcmc samples/: con_seq_current.txt  con_seq_estm.txt  coordinate.txt  count_type_initial.txt  epi_final.txt  infected_source_current.txt  initial_current_size.txt  initial_f_E.txt  initial_f_I.txt  initial_f_R.txt  initial_g_E.txt  initial_h_E.txt  initial_index.txt  initial_infected_source.txt  initial_infecting_size.txt  initial_kt_sum_E.txt  initial_lh.txt  initial_log_f_S.txt  initial_norm_const.txt  initial_q_E.txt  initial_t_e.txt  initial_t_i.txt  lh_current.txt  parameters_current.txt  parameters_other.txt  sample_data.txt  t_e_sort_initial.txt  xi_E_sort_initial.txt
scripts/: phylo_seir_fmd_inference.cpp  phylo_seir_fmd_inference_IO.cpp  phylo_seir_fmd_inference_functions.cpp  phylo_seir_fmd_inference_header.h
